tests/ui/simd/monomorphize-oversized-no-codegen.stderr
error: values of the type `[u8; usize::MAX]` are too big for the target architecture
  --> $DIR/monomorphize-oversized-no-codegen.rs:11:1
   |
LL | pub fn function(value: Struct) -> u8 {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

